--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -9,9 +9,9 @@
 
 <link rel="stylesheet" href="/css/footer.css">
 
-<footer class="text-lg-start bg-dark text-muted">
+<footer class="text-lg-start bg text-muted">
 
-    <section class="">
+    <section class="bgedit">
         <div class="cont">
 
             <div class="mainCont">
@@ -19,12 +19,14 @@
                 <div class="companyInfo">
 
                     <div class="one">
-                        <h4 class="text-uppercase">
-                            <i class="fas fa-gem me-3 text-secondary"></i>&nbsp;CONTENT BAZZAR
+                        <h4 style="color:#fbe600ba" class="text-uppercase">
+                            <i style="color:#fbe600ba !important "  class="fas fa-gem me-3 text-secondary"></i>&nbsp;CONTENT BAZZAAR
                         </h4>
                         <br>
                         <span>
-                            We’ve crafted our blog to share what we’ve learned working on content marketing projects for thousands of clients. Start reading now to get expert insight on content creation, SEO and content marketing tips, tactics and strategies.
+                            We’ve crafted our blog to share what we’ve learned working on content marketing projects for
+                            thousands of clients. Start reading now to get expert insight on content creation, SEO and
+                            content marketing tips, tactics and strategies.
                         </span>
                         <br><br>
                         <div class="social">
@@ -37,21 +39,25 @@
                             <a href="#" class="me-4 link-secondary">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="https://www.linkedin.com/company/content-bazzaar/" target="_blank" class="me-4 link-secondary">
+                            <a href="https://www.linkedin.com/company/content-bazzaar/" target="_blank"
+                                class="me-4 link-secondary">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a target="_blank" href="https://github.com/Lakshaynailwal/ContentWebpage" class="me-4 link-secondary">
+                            <a target="_blank" href="https://github.com/Lakshaynailwal/ContentWebpage"
+                                class="me-4 link-secondary">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
 
                         <div class="contact">
-                            <h5 class="text-uppercase fw-bold mt-4">
+                            <h5 class="text-uppercase  mt-4">
                                 Reach out to us at
                             </h5>
                             <!-- <span><span style="color: #007fff;">Address</span>:&nbsp; IIT Mandi North Campus</span> -->
                             <!-- <br> -->
-                            <span><span style="color: #007fff;">Email</span>:&nbsp;<a style="color: white; " target="_blank" href="mailto:info@contentbazzaar.com">info@contentbazzaar.com</a> </span>
+                            <span><span style="color: #fbe600ba">Email</span>:&nbsp;<a style="color: white; "
+                                    target="_blank" href="mailto:info@contentbazzaar.com">info@contentbazzaar.com</a>
+                            </span>
                             <!-- <br> -->
                             <!-- <span><span style="color: #007fff;">Phone</span>:&nbsp; +91 7838131836</span> -->
                         </div>
@@ -86,34 +92,34 @@
                                 Services
                             </h5>
 
-                                <span>
-                                    <a href="/#blog" class="text-reset">Blog Posts</a>
-                                </span>
-                                <span>
-                                    <a href="/#website" class="text-reset">Website Content</a>
-                                </span>
-                                <span>
-                                    <a href="/#tech" class="text-reset">Technical Writing</a>
-                                </span>
-                                <span>
-                                    <a href="/#press" class="text-reset">Press Releases</a>
-                                </span>
-                                <span>
-                                    <a href="/#copy" class="text-reset">Copy Writing</a>
-                                </span>
-                                <span>
-                                    <a href="/#ebook" class="text-reset">Ebook Writing</a>
-                                </span>
-                                <span>
-                                    <a href="/#white" class="text-reset">White Papers</a>
-                                </span>
-                                <span>
-                                    <a href="/#email" class="text-reset">Email Newsletter</a>
-                                </span>
-                                <span>
-                                    <a href="/#product" class="text-reset">Product Description</a>
-                                </span>
-                            
+                            <span>
+                                <a href="/#blog" class="text-reset">Blog Posts</a>
+                            </span>
+                            <span>
+                                <a href="/#website" class="text-reset">Website Content</a>
+                            </span>
+                            <span>
+                                <a href="/#tech" class="text-reset">Technical Writing</a>
+                            </span>
+                            <span>
+                                <a href="/#press" class="text-reset">Press Releases</a>
+                            </span>
+                            <span>
+                                <a href="/#copy" class="text-reset">Copy Writing</a>
+                            </span>
+                            <span>
+                                <a href="/#ebook" class="text-reset">Ebook Writing</a>
+                            </span>
+                            <span>
+                                <a href="/#white" class="text-reset">White Papers</a>
+                            </span>
+                            <span>
+                                <a href="/#email" class="text-reset">Email Newsletter</a>
+                            </span>
+                            <span>
+                                <a href="/#product" class="text-reset">Product Description</a>
+                            </span>
+
                         </div>
                     </div>
 
@@ -133,6 +139,9 @@
             </div>
         </div>
 
+        <div class="text-center p-4" style="background-color: #1b0051;">
+            © 2023 Copyright: Content Bazzaar
+        </div>
     </section>
 
     <!-- <section class="d-flex align-items-center justify-content-center justify-content-lg-between  border-bottom">
@@ -140,9 +149,6 @@
     <!-- Section: Links  -->
 
     <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-        © 2023 Copyright: Content Bazzaar
-    </div>
     <!-- Copyright -->
 </footer>
 <!-- Footer -->
