--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,7 +1,7 @@
 .form {
     width: 100%;
     margin: 40px auto;
-    height: 450px;
+    min-height: 450px;
     /* box-shadow: 1px 1px 15px 1px grey; */
     /* border-radius: 20px; */
     display: flex;
@@ -30,7 +30,7 @@
 
 .input {
     width: 80%;
-    padding: 7px;
+    padding: 12px;
     margin: 10px auto;
     text-align: center;
     font-size: 17px;
@@ -47,7 +47,7 @@
 }
 
 .text {
-    padding: 20px;
+    padding: 15px;
 }
 
 .input {
@@ -71,18 +71,17 @@
     margin: 10px auto;
 }
 .image{
-    width: 100%;
     height: 300px;
 }
 .right{
     margin: 10px auto;
     width:45%
 }
-.button{
+/* .button{
     background-color: #9ccc65 !important;
-}
-.button:hover{
-    background-color: unset !important;
-    border: 2px solid #9ccc65 !important;
-    color: black;
+} */
+.btn:hover{
+    background-color: white !important;
+    border: 2px solid #1b0051  !important;
+    color: #1b0051 !important ;
 }
