--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -5,7 +5,7 @@
 }
 
 .one {
-    width: 50%
+    width: 40%
 }
 
 .text-muted {
@@ -18,6 +18,8 @@
     display: flex;
     padding: 1rem;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .mainCont {
@@ -28,7 +30,7 @@
 }
 
 .Links {
-    width: 40%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -48,7 +50,7 @@
 .sec{
     display: flex;
     width: 50%;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 @media only screen and (max-width:1050px) {
@@ -151,4 +153,26 @@
 }
 .link span{
     margin: 5px;
+}
+
+
+.social a i:hover{
+    color:#fbe600ba
+}
+
+.text-uppercase{
+    color:#fbe600ba
+}
+
+.Links span a {
+    color:white
+}
+
+.bg{
+    background: url("https://images.unsplash.com/photo-1586775490184-b79f0621891f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80") no-repeat center center/cover;
+    background-attachment: fixed;
+}
+
+.bgedit{
+    background-color: rgb(27 0 81 / 50%);
 }
