--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -41,6 +41,11 @@
 
 .navbar-nav .nav-link{
     color: black !important;
+    font-size: 17px;
+}
+.navbar-nav .nav-link:hover{
+    transform: scaleX(1.2);
+    text-decoration: underline;
 }
 
 *{
@@ -49,4 +54,9 @@
 .navbar-brand img{
     height: 60px;
     object-fit: cover;
+}
+
+.btn{
+    background-color: #1b0051 !important;
+    color: white !important;
 }
