--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/"><img class ="img" src="/images/logo.png" alt="">&nbsp;CONTENT BAZZAR</a>
+    <a  class="navbar-brand" href="/"><img class ="img" src="/images/logo.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,11 +23,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/blog">Blogs</a>
             </li>
-            <% if (admin) {%>
                 <li class="nav-item">
                     <a class="nav-link" href="/blog/paid/buy">Purchase</a>
                 </li>
-                <%}%>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
@@ -47,7 +45,9 @@
             </li>
         </ul>
         <ul class="login">
-            <% if(user) {%>
+            <button class="btn"><a class="nav-link log" href="/getquote">Get-Quote</a></button>
+            
+            <!-- <% if(user) {%>
                 <h5 style="padding:7px" class="nav-link"><%=user.name%>
                 </h5>
                 <li class="nav-item">
@@ -61,7 +61,7 @@
                         <button class="btn"><a class="nav-link log" href="/signup">SignUp</a></button>
 
                     </li>
-                    <%}%>
+                    <%}%> -->
         </ul>
     </div>
 </nav>
