--- a/templates/contact.ejs
+++ b/templates/contact.ejs
@@ -18,7 +18,7 @@
             <div class="left">
                 <h1 class="leftin">Get Quotes From Professionals</h1>
                 <h4 class="leftin para">Let's talk about everything!</h4>
-                <img class="leftin image" style="height:500px"
+                <img class="leftin image" style="height:400px; margin: auto;"
                     src="https://img.freepik.com/free-vector/positive-mind-lettering-with-photo_52683-40379.jpg" alt="">
             </div>
 
