--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,22 +1,23 @@
 .conti {
     display: flex;
     flex-direction: column;
-    background: url("/images/main3.jpg") no-repeat center center/cover;
+    background: url("/images/main3.jpg") rgba(0,0,0,0.5) no-repeat center center/cover;
     background-attachment: fixed;
+    background-blend-mode: multiply;
     height: 550px;
 }
 .conti h1,.conti .create{
     color: white;
     z-index: 10;
 }
-.conti::before{
+/* .conti::before{
     content :"";
     width: 100%;
     height: 550px;
     position: absolute;
-    /* z-index: -1; */
+    z-index: -1;
     background-color: rgb(0,0,0,0.5);
-}
+} */
 
 .search {
     width: 70%;
