--- a/static/css/index.css
+++ b/static/css/index.css
@@ -39,9 +39,17 @@ body {
     height: 80vh;
 }
 
+.landing{
+    width: 100%;
+    margin:auto;
+    background-color: #1b0051;
+}
+
+
 .carousel-item img {
     width: 100%;
     height: 80vh;
+    margin: auto;
     object-fit: cover;
 }
 
@@ -56,7 +64,7 @@ body {
 
 .mainsection {
     width: 100%;
-    height: 80vh;
+    /* height: 80vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -138,14 +146,16 @@ body {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .promise .element {
     width: 350px;
-    /* min-height: 200px; */
+    min-height: 200px;
     display: flex;
     flex-direction: column;
-    margin: 20px auto;
+    margin: 20px;
     padding: 10px;
 }
 
@@ -269,6 +279,10 @@ body {
         font-size: 3.7rem;
     }
 
+    .accordion-item{
+        width: 100% !important;
+    }
+
     .image{
         height: 170px ;
     }
@@ -339,25 +353,6 @@ body {
     color:black;
 }
 
-.carousel-item::before {
-    /* content: ""; */
-    /* position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    font-size: calc(5.5vw + 30px);
-    z-index: 10;
-    color: white; */
-    /* text-shadow: 1px 1px 20px #fbe600ba; */
-    /* bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh; */
-    /* background-color: rgb(0, 0, 0, 0.2); */
-    /* text-align: center; */
-}
-
 .heading{
     color:#1b0051;
     font-size:2rem
@@ -368,3 +363,29 @@ body {
     justify-content: center ; 
     align-items: center;
 }
+
+.accordion{
+    margin: 50px auto;
+    text-align: center;
+}
+
+.accordion-item{
+    width: 70%;
+    margin: 20px auto;
+    border: 2px solid #1b0051 !important;
+    text-align: center;
+    border-radius: 10px !important;
+}
+.accordion-item h2{
+    border-radius: 10px;
+}
+
+.accordion-button:not(.collapsed){
+    background-color: #1b0051 !important;
+    color: white !important;
+}
+
+.accordion-button:focus {
+    box-shadow: unset !important;
+}
+
