--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 
-<body>
+<body onload="notification()">
     <%- include("partials/navbar.ejs") %>
         <div class="mainsection ">
 
@@ -21,13 +21,11 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active ">
-                        <!-- <div class="carousel-caption d-none d-md-block">
-                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                        </div> -->
-                        <img class="d-block w-100" src="/images/CB.jpg" alt="Third slide">
+                    <div class="carousel-item active landing">
+                        <img class="d-block" src="/images/CB.jpg" alt="Third slide">
                     </div>
                     <div class="carousel-item ">
                         <div class="carousel-caption ">
@@ -42,12 +40,12 @@
                         </div>
                         <img class="d-block w-100" src="/images/2.png" alt="Third slide">
                     </div>
-                    <!-- <div class="carousel-item">
+                    <div class="carousel-item">
                         <div class="carousel-caption ">
                             <span>Building brand awareness is the foundation of your business</span>
                         </div>
                         <img class="d-block w-100" src="/images/3.png" alt="Second slide">
-                    </div> -->
+                    </div>
                     <div class="carousel-item">
                         <div class="carousel-caption ">
                             <span>Building brand awareness is the foundation of your business</span>
@@ -55,21 +53,21 @@
                         <img class="d-block w-100" src="/images/4.jpg" alt="Third slide">
                     </div>
                     <div class="carousel-item">
-                        <!-- <div class="carousel-caption">
-                            < <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-                        </div> -->
+                        <div class="carousel-caption">
+                            <span>Partnering over business is our motto</span>
+                        </div>
                         <img class="d-block w-100" src="/images/5.png" alt="Third slide">
                     </div>
-                    
+
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
 
@@ -105,7 +103,7 @@
         <div id="services">
             <h2 class="heading">Our Services</h2>
             <div class="section">
-                
+
                 <a href="#">
                     <div class="carded" id="ebook">
                         <img src="https://cdn-icons-png.flaticon.com/128/3854/3854800.png" alt="">
@@ -160,8 +158,8 @@
                     </div>
                 </a>
 
-                
-                
+
+
 
                 <a href="#">
                     <div class="carded" id="tech">
@@ -180,7 +178,7 @@
                             content.</span> -->
                     </div>
                 </a>
-                
+
 
                 <a href="#">
 
@@ -192,7 +190,7 @@
                 </a>
 
 
-               
+
             </div>
 
 
@@ -212,21 +210,20 @@
                     <h3>
                         Well researched content
                     </h3>
-                    <!-- <span>
-                        We focus on providing well researched content solutions through our services in India and
-                        everything
-                        goes as per a solid content strategy.
-                    </span> -->
+                    <span>
+                        we have content writers who are experts and experienced in their respective fields and we put
+                        utmost care in providing accurate content to our customers.
+                    </span>
                 </div>
 
                 <div class="element">
                     <h3>
                         Customized content
                     </h3>
-                    <!-- <span>
-                        We ask enough questions before starting a project to know all about your needs and requirements.
-                        This makes sure that the content aligns with your brand's goals.
-                    </span> -->
+                    <span>
+                        We at content Bazzaar understand the value addition content can do to any business. So, every
+                        time we make content tailored to the need of individual customers.
+                    </span>
                 </div>
 
 
@@ -235,150 +232,169 @@
                         No plagiarism
 
                     </h3>
-                    <!-- <span>
-                        We hate copied content as much as you people do. Plagiarism free content is always on our
-                        priority
-                        list and the end product for our clients would be 100% unique and engaging content.
-                    </span> -->
+                    <span>
+                        This is our promise that you will never get any kind of copied content from us. We have 3 level
+                        check system to stop any kind of plagarism
+                    </span>
                 </div>
 
                 <div class="element">
                     <h3>
-                        Quick and in time 
+                        Quick and in time
                     </h3>
-                    <!-- <span>
-                        As soon as you order your content our team of professional content creators in India start
-                        working
-                        as
-                        per the guidelines.
-                    </span> -->
+                    <span>
+                        We are always there for you. Every time you have any query, that will be answered in 24 to 48
+                        hrs time. Also me make sure to deliver your Content well within the deadline.
+                    </span>
                 </div>
-                
+
                 <div class="element">
                     <h3>
                         SEO optimised content
                     </h3>
-                    <!-- <span>
-                        The content that we deliver is optimized for both the users and search engines. It allows our
-                        clients to get better results for their online SEO campaigns.
-                    </span> -->
+                    <span>
+                        we provide content with keeping in mind to use the of trending words and phrases.
+                    </span>
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+        <!-- faqs section -->
+
+            <div class="accordion container accordion-flush" id="accordionFlushExample">
+                <h2 class="heading">Frequently Asked Questions</h2>
+                <br>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            <!-- faq title -->
+                            Lorem, ipsum.
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <!-- faq content -->
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus suscipit molestias, quidem adipisci commodi, magnam labore veniam quis laborum qui enim, laboriosam inventore recusandae accusamus placeat nam? Repudiandae modi perspiciatis iste beatae minus velit, voluptas consequatur optio doloremque nisi.
+                        </div>
+                    </div>
                 </div>
                 
-<!--                 
-                <div class="element">
-                    <h3>
-                        Fully Managed
-                    </h3>
-                    <span>
-                        You don't need to manage writers and their gigs as we provide fully managed content writing
-                        services. Focus on the things that you are good at and let us do the content part for you.
-                    </span>
-                </div> -->
             </div>
 
-        </div>
 
 
-        <div id="contact">
-            <h2 class="heading">Contact Us</h2>
-            <div class="mainbody">
-                <div class="left">
-                    <h1 class="leftin">Congratulations!
-                        <br>
-                        You are at the right place
-                    </h1>
-                    <span class="leftin para">We are here to help you out with your queries. Let's get started in giving
-                        shape to your idea in the form of content.</span>
-                    <img class="leftin image"
-                        src="https://preview.colorlib.com/theme/bootstrap/contact-form-16/images/undraw-contact.svg"
-                        alt="">
+
+            <!-- faqs section -->
+
+
+
+            <div id="contact">
+                <h2 class="heading">Contact Us</h2>
+                <div class="mainbody">
+                    <div class="left">
+                        <h1 class="leftin">Congratulations!
+                            <br>
+                            You are at the right place
+                        </h1>
+                        <span class="leftin para">We are here to help you out with your queries. Let's get started in
+                            giving
+                            shape to your idea in the form of content.</span>
+                        <img class="leftin image"
+                            src="https://preview.colorlib.com/theme/bootstrap/contact-form-16/images/undraw-contact.svg"
+                            alt="">
+                    </div>
+
+                    <div class="right">
+                        <form class="form" action="/send">
+
+                            <input class="input" type="text" name="name" required placeholder="Name" />
+
+                            <input class="input" type="text" name="email" required placeholder="E-mail" />
+                            <div class="email error"></div>
+
+                            <input class="input" type="text" name="subject" placeholder="Subject" />
+
+                            <textarea class="text input" name="body" id="" rows="5" required
+                                placeholder="Write your query here!"></textarea>
+
+                            <button class="btn button">Contact</button>
+                        </form>
+                    </div>
+
                 </div>
-
-                <div class="right">
-                    <form class="form" action="/send">
-
-                        <input class="input" type="text" name="name" required placeholder="Name" />
-
-                        <input class="input" type="text" name="email" required placeholder="E-mail" />
-                        <div class="email error"></div>
-
-                        <input class="input" type="text" name="subject" placeholder="Subject" />
-
-                        <textarea class="text input" name="body" id="" rows="5" required
-                            placeholder="Write your query here!"></textarea>
-
-                        <button class="btn button">Contact</button>
-                    </form>
-                </div>
-
             </div>
-        </div>
 
 
-        <div class="counter">
-            <div class="client counter-1 ">
-                <div class="counter-style">
-                    <h1 data-val="100" class="counter-val" ></h1>
-                    <h1>+</h1>
+            <div class="counter">
+                <div class="client counter-1 ">
+                    <div class="counter-style">
+                        <h1 data-val="100" class="counter-val"></h1>
+                        <h1>+</h1>
+                    </div>
+                    <span>clients</span>
                 </div>
-                <span>clients</span>
-            </div>
-            <div class="content counter-1 ">
-                <div class="counter-style">
-                    <h1 data-val="5" class="counter-val" ></h1>
-                    <h1>K+</h1>
+                <div class="content counter-1 ">
+                    <div class="counter-style">
+                        <h1 data-val="5" class="counter-val"></h1>
+                        <h1>K+</h1>
+                    </div>
+                    <span>Content Piece Delivered</span>
                 </div>
-                <span>Content Piece Delivered</span>
-            </div>
-            <div class="word counter-1 ">
-                <div class="counter-style">
-                    <h1 data-val="1" class="counter-val" ></h1>
-                    <h1>M+</h1>
+                <div class="word counter-1 ">
+                    <div class="counter-style">
+                        <h1 data-val="1" class="counter-val"></h1>
+                        <h1>M+</h1>
+                    </div>
+                    <span>Words Written</span>
                 </div>
-                <span>Words Written</span>
-            </div>
-            <div class="pro counter-1 ">
-                <div class="counter-style">
-                    <h1 data-val="200" class="counter-val" ></h1>
-                    <h1>+</h1>
+                <div class="pro counter-1 ">
+                    <div class="counter-style">
+                        <h1 data-val="200" class="counter-val"></h1>
+                        <h1>+</h1>
+                    </div>
+                    <span>Projects</span>
                 </div>
-                <span>Projects</span>
             </div>
-        </div>
 
 
-        <%- include("partials/footer.ejs") %>
+            <%- include("partials/footer.ejs") %>
 
-            <script src="/js/contact.js"></script>
+                <script src="/js/contact.js"></script>
 
 
-            <script>
+                <script>
 
-                let observer = new IntersectionObserver((entries) => {
-                    entries.forEach((element) => {
-                        if (element.isIntersecting) {
-                            $(element.target).prop('Counter-1', 0).animate({
-                                Counter: $(element.target).data('val')
-                            }, {
-                                duration: 2500,
-                                easing: 'swing',
-                                step: function (now) {
-                                    $(element.target).text(Math.ceil(now));
-                                }
-                            });
-                        }
-                        else {
-                            $(element.target).stop();
-                        }
-                    })
-                });
+                    let observer = new IntersectionObserver((entries) => {
+                        entries.forEach((element) => {
+                            if (element.isIntersecting) {
+                                $(element.target).prop('Counter-1', 0).animate({
+                                    Counter: $(element.target).data('val')
+                                }, {
+                                    duration: 2500,
+                                    easing: 'swing',
+                                    step: function (now) {
+                                        $(element.target).text(Math.ceil(now));
+                                    }
+                                });
+                            }
+                            else {
+                                $(element.target).stop();
+                            }
+                        })
+                    });
 
-                const box = document.getElementsByClassName('counter-val');
-                for (let i = 0; i < box.length; i++) {
-                    observer.observe(box[i])
-                }
+                    const box = document.getElementsByClassName('counter-val');
+                    for (let i = 0; i < box.length; i++) {
+                        observer.observe(box[i])
+                    }
 
-            </script>
+                </script>
 </body>
 
 </html>
