--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/navbar.css">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -47,21 +47,11 @@
         <ul class="login">
             <button class="btn"><a class="nav-link log" href="/getquote">Get-Quote</a></button>
             
-            <!-- <% if(user) {%>
-                <h5 style="padding:7px" class="nav-link"><%=user.name%>
-                </h5>
+            <% if(admin) {%>
                 <li class="nav-item">
                     <button class="btn"><a class="nav-link log" href="/logout">Logout</a></button>
                 </li>
-                <%} else {%>
-                    <li class="nav-item">
-                        <button class="btn"><a class="nav-link log" href="/login">Login</a></button>
-                    </li>
-                    <li class="nav-item">
-                        <button class="btn"><a class="nav-link log" href="/signup">SignUp</a></button>
-
-                    </li>
-                    <%}%> -->
+                    <%}%>
         </ul>
     </div>
 </nav>
