--- a/templates/writeblog.ejs
+++ b/templates/writeblog.ejs
@@ -24,7 +24,7 @@
         <form class="form" action="/blog/create" method="post">
             <input class="text1 com" type="text" required name="title" placeholder="Write Your Title">
             <input class="text1 com" type="text" name="tag" placeholder="Enter A Tag">
-            
+
             <!-- <div class="button" style="width: 80%; margin: auto;">
                 <button id="upbtn" type="button" class="btn btn1 btn-primary" data-toggle="modal" data-target="#upload">
                     Upload Image
@@ -32,8 +32,9 @@
                 <input type="hidden" name="image" id="imageupload">
             </div> -->
             <textarea class="text1 com" name="description" id="" placeholder="Write Your Description"></textarea>
-            <textarea class="text2 com " id="textarea" name="markdown" id="markdown" placeholder="Write Your Markdown"></textarea>
-            
+            <textarea class="text2 com " id="textarea" name="markdown" id="markdown"
+                placeholder="Write Your Markdown"></textarea>
+
             <input class="text1 com" type="number" name="amount" placeholder="Enter Amount">
             <label for="paid">Paid or Not</label>
             <input type="checkbox" name="paid" id="paid">
@@ -75,8 +76,8 @@
             <script>
                 tinymce.init({
                     selector: '#textarea',
-                    plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed linkchecker a11ychecker tinymcespellchecker permanentpen powerpaste advtable advcode editimage tinycomments tableofcontents footnotes mergetags autocorrect typography inlinecss',
-                    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+                    plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
+                    toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
                     tinycomments_mode: 'embedded',
                     tinycomments_author: 'Author name',
                     mergetags_list: [
