--- a/templates/login.ejs
+++ b/templates/login.ejs
@@ -28,7 +28,8 @@
 
                     <input class="input" type="password" name="password" required placeholder="Password" />
                     <div class="password error"></div>
-                    <button class="btn button">Login</button>
+                    <button class="btn button">Login</button> 
+                    <a href="/signup">Signup</a>
                 </form>
             </div>
         </div>
