--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -47,7 +47,7 @@
         <ul class="login">
             <button class="btn"><a class="nav-link log" href="/getquote">Get-Quote</a></button>
             
-            <button class="btn"><a class="nav-link log" href="/login">Logout</a></button>
+            <!-- <button class="btn"><a class="nav-link log" href="/login">Logout</a></button> -->
             <% if(admin) {%>
                 <li class="nav-item">
                     <button class="btn"><a class="nav-link log" href="/logout">Logout</a></button>
