--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 
-<body onload="notification()">
+<body>
 
     <!-- <button onclick="subscribe()">Subscribe</button>
 
